--- a/index.html
+++ b/index.html
@@ -26,28 +26,24 @@
       <div class="card shadow-sm mb-4">
         <div class="card-body p-4">
           <h1 class="card-title text-center mb-4">Custom Label Generator</h1>
-
           <!-- Instructions Button -->
           <button type="button" class="btn btn-secondary mb-4 w-100" data-bs-toggle="modal" data-bs-target="#instructionsModal">
             Instructions
           </button>
-
           <!-- Instructions Modal -->
           <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="instructionsModalLabel">ব্যবহার নির্দেশনা</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                  <!-- Modal content here -->
-                  <!-- ...instructions... -->
+                  <!-- Instructions content -->
                 </div>
               </div>
             </div>
           </div>
-
           <!-- Paper size -->
           <div class="mb-3 row">
             <label for="presetSize" class="col-sm-4 col-form-label">Paper Size</label>
@@ -79,7 +75,6 @@
               </select>
             </div>
           </div>
-
           <!-- Unlock Code -->
           <div class="mb-2">
             <label for="unlockInput" class="form-label">Enter unlock code:</label>
@@ -88,12 +83,12 @@
               <button type="button" id="unlockBtn" class="btn btn-outline-primary">Unlock</button>
             </div>
           </div>
-
-          <!-- Form Inputs -->
+          <!-- Locked Form -->
+          <fieldset id="formFieldset" disabled>
           <form id="labelForm">
             <div class="mb-2">
               <label for="fontInput" class="form-label">Upload Font (optional)</label>
-              <input type="file" id="fontInput" class="form-control" accept=".ttf,.otf" disabled>
+              <input type="file" id="fontInput" class="form-control" accept=".ttf,.otf">
             </div>
             <div class="mb-2">
               <label for="headerInput" class="form-label">Header Image</label>
@@ -114,11 +109,11 @@
             </div>
             <button type="button" id="generateBtn" class="btn btn-primary w-100">Generate Labels</button>
           </form>
+          </fieldset>
           <div id="alertPlaceholder" class="mt-3"></div>
         </div>
       </div>
-
-      <!-- Accordion -->
+      <!-- Coffee Accordion -->
       <div class="accordion mb-4" id="coffeeAccordion">
         <div class="accordion-item">
           <h2 class="accordion-header" id="coffeeHeading">
@@ -134,123 +129,73 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
-
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const { jsPDF } = window.jspdf;
     let parsedRows = [], invoiceList = [];
     let customFontName = null, customFontData = null;
-
     // Helpers
-    function readFileAsDataURL(file) { return new Promise(res => { const rd=new FileReader(); rd.onload=()=>res(rd.result); rd.readAsDataURL(file); }); }
-    function readFileAsArrayBuffer(file) { return new Promise(res => { const rd=new FileReader(); rd.onload=()=>res(rd.result); rd.readAsArrayBuffer(file); }); }
+    function readFileAsDataURL(file) { return new Promise(res => {const rd=new FileReader(); rd.onload=()=>res(rd.result); rd.readAsDataURL(file);});}
+    function readFileAsArrayBuffer(file) { return new Promise(res => {const rd=new FileReader(); rd.onload=()=>res(rd.result); rd.readAsArrayBuffer(file);} );}
     function titleCase(s) { return s.toLowerCase().split(' ').map(w=>w.charAt(0).toUpperCase()+w.slice(1)).join(' '); }
-
-    // Toggle custom size fields
-    document.getElementById('presetSize').addEventListener('change', e => {
-      document.getElementById('customSizeFields').classList.toggle('d-none', e.target.value !== 'custom');
-    });
-
-    // Unlock code logic
+    // Toggle custom fields
+    document.getElementById('presetSize').addEventListener('change', e=>{document.getElementById('customSizeFields').classList.toggle('d-none', e.target.value!=='custom');});
+    // Unlock logic
     async function checkUnlock(code) {
       const resp = await fetch('https://raw.githubusercontent.com/nasimulhasan/testlabel/main/keys.json');
-      if (!resp.ok) throw new Error('Could not load codes');
+      if(!resp.ok) throw new Error('Could not load codes');
       const { validCodes } = await resp.json();
       return validCodes.includes(code);
     }
-    document.getElementById('unlockBtn').addEventListener('click', async () => {
+    document.getElementById('unlockBtn').addEventListener('click', async()=>{
       const code = document.getElementById('unlockInput').value.trim();
       try {
-        if (await checkUnlock(code)) {
-          document.getElementById('fontInput').disabled = false;
-          showAlert('Custom-font unlocked!', 'success');
-        } else {
-          showAlert('Invalid unlock code.', 'warning');
-        }
-      } catch {
-        showAlert('Error verifying code.', 'danger');
-      }
+        if(await checkUnlock(code)){
+          document.getElementById('formFieldset').removeAttribute('disabled');
+          showAlert('Unlocked! You can now generate labels.', 'success');
+        } else showAlert('Invalid unlock code.', 'warning');
+      } catch { showAlert('Error verifying code.', 'danger'); }
     });
-
     // Alerts
-    function showAlert(msg, type='danger') {
-      const div=document.createElement('div');
-      div.innerHTML=`<div class="alert alert-${type} alert-dismissible" role="alert">${msg}<button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>`;
+    function showAlert(msg, type='danger'){
+      const div=document.createElement('div'); div.innerHTML=`<div class="alert alert-${type} alert-dismissible" role="alert">${msg}<button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>`;
       document.getElementById('alertPlaceholder').append(div);
     }
-
     // Parse Excel
-    document.getElementById('excelInput').addEventListener('change', async e => {
+    document.getElementById('excelInput').addEventListener('change', async e=>{
       const file=e.target.files[0]; if(!file) return;
-      try {
+      try{
         const buff=await readFileAsArrayBuffer(file), wb=XLSX.read(buff,{type:'array'});
-        let last={}; parsedRows=XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]],{defval:''})
-          .map(r=>{['Invoice','First Name','Last Name','Phone','Address','Order Total Amount'].forEach(k=>r[k]=r[k]||last[k]||''); last={...r}; return r;});
-        invoiceList=[...new Set(parsedRows.map(r=>String(r['Invoice']).trim()))].sort();
-        const sel=document.getElementById('invoiceSelect'); sel.innerHTML=''; invoiceList.forEach(i=>sel.append(new Option(i,i)));
+        let last={}; parsedRows=XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]],{defval:''}).map(r=>{['Invoice','First Name','Last Name','Phone','Address','Order Total Amount'].forEach(k=>r[k]=r[k]||last[k]||''); last={...r}; return r;});
+        invoiceList=[...new Set(parsedRows.map(r=>String(r['Invoice']).trim()))].sort(); const sel=document.getElementById('invoiceSelect'); sel.innerHTML=''; invoiceList.forEach(i=>sel.append(new Option(i,i)));
         document.getElementById('invoiceSelection').classList.remove('hidden');
-      } catch(err) { showAlert('Error parsing Excel: '+err.message); }
+      }catch(err){ showAlert('Error parsing Excel: '+err.message); }
     });
-
     // Generate Labels
-    document.getElementById('generateBtn').addEventListener('click', async ()=>{
-      const headerUrl=await readFileAsDataURL(document.getElementById('headerInput').files[0]);
-      const footerUrl=await readFileAsDataURL(document.getElementById('footerInput').files[0]);
-      if(!headerUrl||!footerUrl) return showAlert('Select both header and footer.');
-      if(!parsedRows.length) return showAlert('Upload and parse Excel first.');
-
-      // Paper size
-      let w,h,unit; const preset=document.getElementById('presetSize').value;
-      if(preset==='custom'){ w=+document.getElementById('paperWidth').value; h=+document.getElementById('paperHeight').value; unit=document.getElementById('paperUnit').value; if(unit==='in'){w*=25.4;h*=25.4;unit='mm';} if(unit==='pt'){w*=0.352778;h*=0.352778;unit='mm';}} else{[w,h,unit]=preset.split(',');w=+w;h=+h;}
-
-      const zip=new JSZip();
-      const opts=Array.from(document.getElementById('invoiceSelect').selectedOptions).map(o=>o.value);
-      const targets=opts.length?opts:invoiceList;
-
-      for(const inv of targets){
-        const group=parsedRows.filter(r=>String(r['Invoice']).trim()===inv);
-        if(!group.length) continue;
-        const doc=new jsPDF({unit,format:[w,h]});
-
-        // inject custom font if unlocked
-        if (customFontName && customFontData) {
-          // register font using filename as alias
-          doc.addFileToVFS(customFontName, customFontData);
-          doc.addFont(customFontName, customFontName, 'normal');
-          doc.setFont(customFontName, 'normal');
-        }
-        // set font size after setting custom font
-        doc.setFontSize(10);(10);
-        // draw header
-        const hp=doc.getImageProperties(headerUrl), hh=w*(hp.height/hp.width);
-        doc.addImage(headerUrl,'PNG',0,0,w,hh);
-        // draw footer
-        const fp=doc.getImageProperties(footerUrl), fh=w*(fp.height/fp.width);
-        doc.addImage(footerUrl,'PNG',0,h-fh,w,fh);
-
-        // two-column text
+    document.getElementById('generateBtn').addEventListener('click', async()=>{
+      alertPlaceholder.innerHTML=''; const headerUrl=await readFileAsDataURL(document.getElementById('headerInput').files[0]); const footerUrl=await readFileAsDataURL(document.getElementById('footerInput').files[0]);
+      if(!headerUrl||!footerUrl) return showAlert('Select both header and footer.'); if(!parsedRows.length) return showAlert('Upload and parse Excel first.');
+      let w,h,unit; const preset=document.getElementById('presetSize').value; if(preset==='custom'){w=+document.getElementById('paperWidth').value;h=+document.getElementById('paperHeight').value;unit=document.getElementById('paperUnit').value;if(unit==='in'){w*=25.4;h*=25.4;unit='mm';}if(unit==='pt'){w*=0.352778;h*=0.352778;unit='mm';}}else{[w,h,unit]=preset.split(',');w=+w;h=+h;}
+      const zip=new JSZip(), opts=Array.from(document.getElementById('invoiceSelect').selectedOptions).map(o=>o.value), targets=opts.length?opts:invoiceList;
+      for(const inv of targets){ const group=parsedRows.filter(r=>String(r['Invoice']).trim()===inv); if(!group.length) continue; const doc=new jsPDF({unit,format:[w,h]});
+        // custom font
+        if(customFontName&&customFontData){doc.addFileToVFS(customFontName,customFontData); doc.addFont(customFontName,customFontName,'normal'); doc.setFont(customFontName,'normal');}
+        doc.setFontSize(10);
+        const hp=doc.getImageProperties(headerUrl), hh=w*(hp.height/hp.width); doc.addImage(headerUrl,'PNG',0,0,w,hh);
+        const fp=doc.getImageProperties(footerUrl), fh=w*(fp.height/fp.width); doc.addImage(footerUrl,'PNG',0,h-fh,w,fh);
         let y=hh+11, labelX=10, valueX=labelX+60;
-        doc.text('Invoice #:', labelX, y); doc.text(inv, valueX, y); y+=7;
-        const name=titleCase(group[0]['First Name']+' '+group[0]['Last Name']);
-        doc.text('Name:', labelX, y); doc.text(name, valueX, y); y+=7;
-        let num=String(group[0]['Phone']).replace(/\D/g,''); if(num.startsWith('880')) num=num.slice(3); else if(num.startsWith('0')) num=num.slice(1); if(num.length>10) num=num.slice(-10);
-        doc.text('Phone:', labelX, y); doc.text(num, valueX, y); y+=7;
-        const addrLines=doc.splitTextToSize(titleCase(group[0]['Address']), w-valueX-10);
-        doc.text('Address:', labelX, y); doc.text(addrLines, valueX, y); y+=addrLines.length*7;
-        const notes=group.map(r=>r['NOTE']||'').join(' ').toLowerCase(); const total=notes.includes('paid')?'0':String(Math.round(group[0]['Order Total Amount']));
-        doc.text('Total:', labelX, y); doc.text(`Tk ${total}`, valueX, y); y+=7;
-        doc.text('Items:', labelX, y); y+=7;
-        group.forEach(r=>{ const item=r['Items']?titleCase(r['Items']):''; const qty=r['Quantity']?` (${r['Quantity']})`:''; if(item){doc.text(`- ${item}${qty}`, labelX+10, y); y+=7;} });
-
-        zip.file(`${inv}.pdf`, doc.output('blob'));
+        doc.text('Invoice #:',labelX,y); doc.text(inv,valueX,y); y+=7;
+        const name=titleCase(group[0]['First Name']+' '+group[0]['Last Name']); doc.text('Name:',labelX,y);doc.text(name,valueX,y);y+=7;
+        let num=String(group[0]['Phone']).replace(/\D/g,''); if(num.startsWith('880'))num=num.slice(3);else if(num.startsWith('0'))num=num.slice(1); if(num.length>10)num=num.slice(-10);doc.text('Phone:',labelX,y);doc.text(num,valueX,y);y+=7;
+        const addrLines=doc.splitTextToSize(titleCase(group[0]['Address']),w-valueX-10);doc.text('Address:',labelX,y);doc.text(addrLines,valueX,y);y+=addrLines.length*7;
+        const notes=group.map(r=>r['NOTE']||'').join(' ').toLowerCase(), total=notes.includes('paid')?'0':String(Math.round(group[0]['Order Total Amount']));doc.text('Total:',labelX,y);doc.text(`Tk ${total}`,valueX,y);y+=7;
+        doc.text('Items:',labelX,y);y+=7;group.forEach(r=>{const item=r['Items']?titleCase(r['Items']):'',qty=r['Quantity']?` (${r['Quantity']})`:''; if(item){doc.text(`- ${item}${qty}`,labelX+10,y);y+=7;}});
+        zip.file(`${inv}.pdf`,doc.output('blob'));
       }
-
-      const blob=await zip.generateAsync({type:'blob'});
-      saveAs(blob,'shipping_labels.zip');
+      const blob=await zip.generateAsync({type:'blob'}); saveAs(blob,'shipping_labels.zip');
     });
   </script>
 </body>
