--- a/index.html
+++ b/index.html
@@ -150,7 +150,100 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // JS remains unchanged
+    const { jsPDF } = window.jspdf;
+    let parsedRows = [], invoiceList = [];
+    let customFontName, customFontData;
+
+    // Helpers
+    const readURL = file => new Promise(res => {
+      const r = new FileReader(); r.onload = ()=>res(r.result); r.readAsDataURL(file);
+    });
+    const readBuffer = file => new Promise(res => {
+      const r = new FileReader(); r.onload = ()=>res(r.result); r.readAsArrayBuffer(file);
+    });
+    const titleCase = s => s.toLowerCase().split(' ').map(w=>w.charAt(0).toUpperCase()+w.slice(1)).join(' ');
+
+    // Unlock page logic
+    async function checkUnlock(code) {
+      const resp = await fetch('https://raw.githubusercontent.com/nasimulhasan/testlabel/main/keys.json');
+      const { validCodes } = await resp.json();
+      return validCodes.includes(code);
+    }
+    document.getElementById('unlockBtn').addEventListener('click', async () => {
+      const code = document.getElementById('unlockInput').value.trim();
+      const alertContainer = document.getElementById('unlockAlert');
+      alertContainer.innerHTML = '';
+      try {
+        if (await checkUnlock(code)) {
+          document.getElementById('unlockPage').classList.add('hidden');
+          document.getElementById('generatorPage').classList.remove('hidden');
+        } else {
+          alertContainer.innerHTML = '<div class="alert alert-warning">Invalid code</div>';
+        }
+      } catch {
+        alertContainer.innerHTML = '<div class="alert alert-danger">Error verifying code</div>';
+      }
+    });
+
+    // Generator setup (unchanged)
+    document.getElementById('presetSize').addEventListener('change', e => {
+      document.getElementById('customSizeFields').classList.toggle('d-none', e.target.value !== 'custom');
+    });
+    document.getElementById('fontInput').addEventListener('change', async e => {
+      const f = e.target.files[0]; if (!f) return;
+      const url = await readURL(f);
+      customFontName = f.name;
+      customFontData = url.split(',')[1];
+    });
+    document.getElementById('excelInput').addEventListener('change', async e => {
+      const f = e.target.files[0]; if (!f) return;
+      try {
+        const arr = await readBuffer(f);
+        const wb = XLSX.read(arr, { type: 'array' });
+        let last={};
+        parsedRows = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]],{defval:''})
+          .map(r=>{ ['Invoice','First Name','Last Name','Phone','Address','Order Total Amount'].forEach(k=>r[k]=r[k]||last[k]||''); last={...r}; return r; });
+        invoiceList = [...new Set(parsedRows.map(r=>r['Invoice'].trim()))];
+        const sel = document.getElementById('invoiceSelect'); sel.innerHTML=''; invoiceList.forEach(i=>sel.append(new Option(i,i)));
+        document.getElementById('invoiceSelection').classList.remove('hidden');
+      } catch {
+        showAlert('Error parsing Excel','danger');
+      }
+    });
+    function showAlert(msg,type='danger'){
+      const d=document.createElement('div');
+      d.innerHTML=`<div class="alert alert-${type} alert-dismissible" role="alert">${msg}<button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>`;
+      document.getElementById('alertPlaceholder').append(d);
+    }
+    document.getElementById('generateBtn').addEventListener('click', async ()=>{
+      const headerF = document.getElementById('headerInput').files[0];
+      const footerF = document.getElementById('footerInput').files[0];
+      if(!headerF||!footerF) return showAlert('Select header and footer');
+      if(!parsedRows.length) return showAlert('Upload and parse Excel first');
+      const header = await readURL(headerF);
+      const footer = await readURL(footerF);
+      let w,h,unit; const pr=document.getElementById('presetSize').value;
+      if(pr==='custom'){ w=+document.getElementById('paperWidth').value; h=+document.getElementById('paperHeight').value; unit=document.getElementById('paperUnit').value; if(unit==='in'){w*=25.4;h*=25.4;unit='mm';} if(unit==='pt'){w*=0.352778;h*=0.352778;unit='mm';} } else {[w,h,unit]=pr.split(','); w=+w; h=+h;}
+      const zip=new JSZip(), opts=Array.from(document.getElementById('invoiceSelect').selectedOptions).map(o=>o.value), targets=opts.length?opts:invoiceList;
+      for(const inv of targets){
+        const group=parsedRows.filter(r=>r['Invoice'].trim()===inv); if(!group.length) continue;
+        const doc=new jsPDF({unit,format:[w,h]});
+        if(customFontName&&customFontData){ doc.addFileToVFS(customFontName,customFontData); doc.addFont(customFontName,customFontName,'normal'); doc.setFont(customFontName,'normal'); } else doc.setFont('helvetica','normal');
+        doc.setFontSize(10);
+        const hp=doc.getImageProperties(header), hh=w*(hp.height/hp.width); doc.addImage(header,'PNG',0,0,w,hh);
+        const fp=doc.getImageProperties(footer), fh=w*(fp.height/fp.width); doc.addImage(footer,'PNG',0,h-fh,w,fh);
+        let y=hh+11,labelX=10,valueX=labelX+18;
+        doc.text('Invoice #:',labelX,y);doc.text(inv,valueX,y);y+=7;
+        const name=titleCase(group[0]['First Name']+' '+group[0]['Last Name']); doc.text('Name:',labelX,y);doc.text(name,valueX,y);y+=7;
+        let num=group[0]['Phone'].replace(/\D/g,''); if(num.startsWith('880'))num=num.slice(3); else if(num.startsWith('0'))num=num.slice(1); if(num.length>10)num=num.slice(-10);
+        doc.text('Phone:',labelX,y);doc.text(num,valueX,y);y+=7;
+        const lines=doc.splitTextToSize(titleCase(group[0]['Address']),w-valueX-10); doc.text('Address:',labelX,y);doc.text(lines,valueX,y);y+=lines.length*7;
+        const notes=group.map(r=>r['NOTE']||'').join(' ').toLowerCase(), tot=notes.includes('paid')?'0':String(Math.round(group[0]['Order Total Amount'])); doc.text('Total:',labelX,y);doc.text(`Tk ${tot}`,valueX,y);y+=7;
+        doc.text('Items:',labelX,y);y+=7; group.forEach(r=>{const it=r['Items']?titleCase(r['Items']):'',q=r['Quantity']?` (${r['Quantity']})`:''; if(it){doc.text(`- ${it}${q}`,labelX+10,y);y+=7;}});
+        zip.file(`${inv}.pdf`,doc.output('blob'));
+      }
+      const blob=await zip.generateAsync({type:'blob'}); saveAs(blob,'shipping_labels.zip');
+    });
   </script>
 </body>
 </html>
